--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -22,6 +22,7 @@
   background-color: rgb(149 150 155);
   padding: 10px 20px;
   color: white;
+  overflow: hidden;
 
   .top-row, .bottom-row {
     display: flex;
@@ -32,6 +33,7 @@
     justify-content: space-between; 
     margin-bottom: 10px;
     width: 100%;
+    overflow: hidden;
   }
 
   .logo-container {
@@ -126,6 +128,34 @@
     .right-side .search {
       display: none;
     }
+    .logout-nav{
+      margin-right: -420px;
+    }
+
+    .menu.show {
+      display: flex;
+      /* align-items: center; */
+      width: 100vw;
+      margin-left: 81px;
+      background: white;
+    }
+    .menu-toggle {
+      display: block;
+      margin-left: 33px;
+      margin-top: -25px;
+  }
+    .navbar {
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(149, 150, 155);
+      padding: 10px 20px;
+      color: white;
+      margin-right: 310px;
+      width: 100vw;
+  }
+  .logout-button{
+    margin-right: 450px;
+  }
   }
 
   @media (max-width: 768px) {
@@ -137,12 +167,12 @@
 
     .menu.show {
       display: flex;
-      align-items: center;
+      // align-items: center;
     }
 
-    .menu-toggle {
-      display: block;
-    }
+    // .menu-toggle {
+    //   display: block;
+    // }
 
     .bottom-row {
       flex-direction: column;
