--- a/src/styles/components/Meals.scss
+++ b/src/styles/components/Meals.scss
@@ -1,9 +1,7 @@
-/* ComplaintsDetails.scss */
-
-.complaints-table-list {
+.meals-table-list {
     margin: 20px 0;
   
-    .complaints-table {
+    .meals-table {
       width: 100%;
       border-collapse: collapse;
       font-size: 15px;
@@ -75,27 +73,45 @@
     }
   }
 
-  
+  /* Meals.scss */
 
-  .complaint-form-modal-overlay {
+.modal-meals {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Adjust z-index as needed to ensure it appears above other content */
+    z-index: 1000; /* Ensure modal is on top of other content */
 }
-
-.complaint-form-modal-container {
-    background-color: white;
+  
+  .modal-content {
+    background-color: #fff;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     max-width: 80%;
     max-height: 80%;
     overflow: auto;
-}
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  .close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #aaa;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  
