--- a/src/styles/components/ComplaintsDetails.scss
+++ b/src/styles/components/ComplaintsDetails.scss
@@ -9,11 +9,9 @@
       font-size: 15px;
       text-align: left;
   
-     
       th, td {
         padding: 12px 15px;
         border: 1px solid #ddd;
-        
       }
   
       thead {
@@ -22,9 +20,7 @@
         th {
           font-weight: bold;
           text-transform: capitalize;
-          
         }
-        
       }
   
       tbody {
@@ -36,7 +32,6 @@
           &:hover {
             background-color: #f1f1f1;
           }
-          
   
           td {
             &.complaint-table-actions {
@@ -74,7 +69,6 @@
                 }
               }
             }
-           
           }
         }
       }
@@ -83,3 +77,114 @@
 
   
 
+//   .complaint-form-modal-overlay {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-color: rgba(0, 0, 0, 0.5);
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     z-index: 1000; /* Adjust z-index as needed to ensure it appears above other content */
+// }
+
+// .complaint-form-modal-container {
+//     background-color: white;
+//     padding: 20px;
+//     border-radius: 8px;
+//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+//     max-width: 80%;
+//     max-height: 80%;
+//     overflow: auto;
+// }
+
+
+.complaint-form-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+
+  .complaint-form-modal-container {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    width: 300px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+    h2 {
+      margin-bottom: 20px;
+      text-align: center;
+      color: #333;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+
+      label {
+        display: block;
+        margin-bottom: 10px;
+        font-weight: bold;
+        color: #555;
+      }
+
+      input,
+      textarea {
+        width: calc(100% - 20px);
+        padding: 8px 10px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        font-size: 14px;
+      }
+
+      textarea {
+        resize: vertical;
+      }
+    }
+
+    .form-actions {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 10px;
+
+      button {
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+        cursor: pointer;
+        transition: background 0.3s;
+
+        &:disabled {
+          cursor: not-allowed;
+        }
+
+        &:first-child {
+          background: #007bff;
+          color: #fff;
+
+          &:hover {
+            background: #0056b3;
+          }
+        }
+
+        &:last-child {
+          background: #6c757d;
+          color: #fff;
+
+          &:hover {
+            background: #5a6268;
+          }
+        }
+      }
+    }
+  }
+}
