--- a/src/styles/components/Meals.scss
+++ b/src/styles/components/Meals.scss
@@ -1,10 +1,23 @@
+.meals-heading{
+  text-align: center;
+}
+
+.meals-search-input{
+  width: 17%;
+  height: 37px;
+  border-radius: 5px;
+  margin-left: 1177px;
+}
+
 .meals-table-list {
     margin: 20px 0;
   
+
     .meals-table {
-      width: 100%;
+      width: 90%;
       border-collapse: collapse;
       font-size: 15px;
+      margin: 0 auto;
       text-align: left;
   
       th, td {
