--- a/src/styles/components/EnquiryDetails.scss
+++ b/src/styles/components/EnquiryDetails.scss
@@ -138,7 +138,7 @@ $text-color: #333;
       // margin-right: 854px;
       margin-left: 19px;
       width: 57px;
-      height: 42px;
+      height: 40px;
       }
 
       .enquiry_switch_button:hover {
@@ -217,7 +217,9 @@ $text-color: #333;
   }
 }
 
-
+nav{
+  margin-bottom: 30px;
+}
 
 .enquiry_pagination {
   display: flex;
@@ -276,3 +278,88 @@ $text-color: #333;
 .enquiry_pagination .page-link:focus {
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
+
+
+.card-view{
+  margin-left: 100px;
+}
+
+
+.enquiry-card-body .card-header{
+  background-color: #f0f0f0;
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  
+}
+
+
+.enquiry-card-view{
+  display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    padding: 16px;
+}
+.enquiry-card {
+  background: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 16px;
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.enquiry-card .enquiry-card-actions {
+  margin-top: 16px;
+  display: flex;
+  justify-content: end;
+  gap: 8px;
+}
+
+.enquiry-card .enquiry-card-actions .export-btn, .edit-btn, .delete-btn{
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #555;
+
+  &:hover {
+    color: #000;
+  }
+}
+
+.enquiry-card .enquiry-card-actions .export-btn{
+   
+    color: #007bff;
+
+    &:hover {
+      color: #0056b3;
+    }
+  }
+
+  .enquiry-card .enquiry-card-actions  .delete-btn {
+    color: #dc3545;
+
+    &:hover {
+      color: #c82333;
+    }
+  }
+
+  .enquiry-card .enquiry-card-actions .edit-btn {
+    color: #007bff;
+
+    &:hover {
+      color: #0056b3;
+    }
+  }
+
+
+
+ // mobile-view------------
+
+ @media (max-width: 767px) {
+  
+ }
