--- a/src/styles/components/EnquiryDetails.scss
+++ b/src/styles/components/EnquiryDetails.scss
@@ -146,7 +146,7 @@ $text-color: #333;
       }
 
       .enquiry_add_button{
-        background-color:    #007bff;
+        background-color:  #007bff;
         color: white;
         border: none;
         padding: 8px 32px;
@@ -154,7 +154,7 @@ $text-color: #333;
         cursor: pointer;
         font-size: 17px;
         border-radius: 5px;
-        margin-left: 1050px;
+        margin-left: 1075px;
       }
 
       .enquiry_search_bar{
@@ -165,7 +165,7 @@ $text-color: #333;
       margin-bottom: 26px;
       margin-top: -1px;
       min-width: 15%;
-      margin-left: 74%;
+      margin-left: 1270px;
       height: 26px;
       padding: 6px;
       border-radius: 7px;
@@ -361,5 +361,303 @@ nav{
  // mobile-view------------
 
  @media (max-width: 767px) {
-  
+
+  .enquiry_add_button{
+    background-color:  #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 43px;
+  }
+
+  .enquiry_export_button{
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 24px;
+    padding: 11px 20px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    position: relative; /* Added for positioning the hover text */
+    display: inline-flex; /* Flex for alignment */
+    align-items: center; /* Center alignment */
+    justify-content: center; /* Center alignment */
+  }
+
+  .enquiry_search_bar{
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 47%;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    }
+
+    .enquiry_switch_button{
+
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 7px 11px;
+      cursor: pointer;
+      font-size: 18px;
+      border-radius: 5px;
+      align-items: center; 
+      justify-content: center;
+      // margin-right: 854px;
+      margin-left: 19px;
+      width: 57px;
+      height: 40px;
+      }
+
+      .enquiry_switch_button:hover {
+        background-color:$secondary-color; /* Replace with the actual $secondary-color value */
+      }
+
+
+      .enquiry_table{
+        width: 100%;
+        overflow-x:scroll;
+        margin-left: 3px;
+      }
+
+
+      .tenant-table {
+        width: 80%;
+
+        margin: 0 auto;
+        font-size: 13px;
+        text-align: left;
+        // overflow-x:scroll
+      
+        th, td {
+          padding: 12px 15px;
+          // border: 1px solid #ddd;
+        }
+      
+        thead {
+          background-color: #f4f4f4;
+      
+          th {
+            font-weight: bold;
+            text-transform: capitalize;
+          }
+        }
+      
+        tbody {
+          tr {
+            &:nth-child(even) {
+              background-color: #f9f9f9;
+            }
+      
+            &:hover {
+              background-color: #f1f1f1;
+            }
+      
+            td {
+              &.actions {
+                display: flex;
+                gap: 3px;
+                width: 70px;
+      
+                .export-btn, .edit-btn, .delete-btn {
+                  background: none;
+                  border: none;
+                  cursor: pointer;
+                  font-size: 13px;
+                  color: #555;
+      
+                  &:hover {
+                    color: #000;
+                  }
+                }
+      
+                .edit-btn {
+                  color: #007bff;
+      
+                  &:hover {
+                    color: #0056b3;
+                  }
+                }
+      
+                .delete-btn {
+                  color: #dc3545;
+      
+                  &:hover {
+                    color: #c82333;
+                  }
+                }
+                
+                .export-btn {
+                  color: #007bff;
+      
+                  &:hover {
+                    color: #0056b3;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+ }
+
+ @media (min-width: 768px) and (max-width: 1024px) {
+
+  .enquiry_add_button{
+    background-color:  #007bff;
+    color: white;
+    border: none;
+    padding: 8px 32px;
+    cursor: pointer;
+    font-size: 17px;
+    border-radius: 5px;
+    margin-left: 389px;
+  }
+
+  .enquiry_export_button{
+    background-color: #007bff;
+    color: rgb(248, 240, 240);
+    border: none;
+    margin-left: 40px;
+    padding: 11px 20px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 5px;
+    position: relative; /* Added for positioning the hover text */
+    display: inline-flex; /* Flex for alignment */
+    align-items: center; /* Center alignment */
+    justify-content: center; /* Center alignment */
+  }
+
+  .enquiry_search_bar{
+    display: flex;
+    justify-content: center;
+    padding: 0 10px;
+    padding: 0 10px;
+    margin-bottom: 26px;
+    margin-top: -1px;
+    min-width: 15%;
+    margin-left: 71%;
+    height: 26px;
+    padding: 6px;
+    border-radius: 7px;
+    border: 1px solid #ccc;
+    }
+
+    .enquiry_switch_button{
+
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 7px 11px;
+      cursor: pointer;
+      font-size: 18px;
+      border-radius: 5px;
+      align-items: center; 
+      justify-content: center;
+      // margin-right: 854px;
+      margin-left: 19px;
+      width: 57px;
+      height: 40px;
+      }
+
+      .enquiry_switch_button:hover {
+        background-color:$secondary-color; /* Replace with the actual $secondary-color value */
+      }
+      .enquiry_table{
+      overflow-x:scroll;
+    }
+    
+    .tenant-table {
+      width: 80%;
+
+      margin: 0 auto;
+      font-size: 13px;
+      text-align: left;
+      // overflow-x:scroll
+    
+      th, td {
+        padding: 12px 15px;
+        // border: 1px solid #ddd;
+      }
+    
+      thead {
+        background-color: #f4f4f4;
+    
+        th {
+          font-weight: bold;
+          text-transform: capitalize;
+        }
+      }
+    
+      tbody {
+        tr {
+          &:nth-child(even) {
+            background-color: #f9f9f9;
+          }
+    
+          &:hover {
+            background-color: #f1f1f1;
+          }
+    
+          td {
+            &.actions {
+              display: flex;
+              gap: 3px;
+              width: 70px;
+    
+              .export-btn, .edit-btn, .delete-btn {
+                background: none;
+                border: none;
+                cursor: pointer;
+                font-size: 13px;
+                color: #555;
+    
+                &:hover {
+                  color: #000;
+                }
+              }
+    
+              .edit-btn {
+                color: #007bff;
+    
+                &:hover {
+                  color: #0056b3;
+                }
+              }
+    
+              .delete-btn {
+                color: #dc3545;
+    
+                &:hover {
+                  color: #c82333;
+                }
+              }
+              
+              .export-btn {
+                color: #007bff;
+    
+                &:hover {
+                  color: #0056b3;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+    
+
  }
