--- a/src/styles/components/ComplaintsDetails.scss
+++ b/src/styles/components/ComplaintsDetails.scss
@@ -361,6 +361,49 @@ $text-color: #333;
   }
 }
 
+ //tooltip
+ .complaints-exportall-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
+}
+
+ .complaints-switch-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 1023px){
   .complaints-actions {
     //display: flex;
@@ -395,6 +438,56 @@ $text-color: #333;
   font-size: 15px;
   margin: 0 auto;
   text-align: left;
+}
+ //tooltip
+ .complaints-exportall-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
+}
+
+ .complaints-switch-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
+}
+
+.complaint-card .complaints-actions {
+  margin-top: 16px;
+  display: flex;
+  justify-content: end;
+  margin-left: 168px;
+  gap: 8px;
 }
 }
 
@@ -447,5 +540,55 @@ $text-color: #333;
   overflow-x: scroll;
         width: 95%;
         margin-left: 10px;
+}
+
+.complaint-card .complaints-actions {
+  margin-top: 16px;
+  display: flex;
+  justify-content: end;
+  margin-left: 150px;
+  gap: 8px;
+}
+ //tooltip
+ .complaints-exportall-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
+}
+
+ .complaints-switch-button {
+  position: relative;
+
+  &:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -1.5em;  // Adjust as needed for positioning
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 1000;
+    pointer-events: none;
+    opacity: 0.8;
+    font-size: 12px;
+  }
 }
 }
