--- a/src/styles/components/EnquiryDetails.scss
+++ b/src/styles/components/EnquiryDetails.scss
@@ -17,7 +17,7 @@ $text-color: #333;
 }
 
 .enquiry-count{
-  margin-left: 1415px;
+  margin-left: 1300px;
     margin-right: 0px;
     margin-top: 15px;
 }
@@ -695,4 +695,60 @@ nav{
     }
     
 
+ }
+
+ @media (min-width: 1025px) and (max-width: 1399px) {
+  .enquiry-card {
+    background: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
+    width: 20%;
+    max-width: 260px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.enquiry_export_button {
+  background-color: #007bff;
+  color: rgb(248, 240, 240);
+  border: none;
+  margin-left: 72px;
+  padding: 11px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 5px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.enquiry_add_button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 8px 32px;
+  margin-right: 14px;
+  cursor: pointer;
+  font-size: 17px;
+  border-radius: 5px;
+  margin-left: 929px;
+}
+.enquiry_search_bar {
+  display: flex;
+  justify-content: center;
+  padding: 0 10px;
+  padding: 0 10px;
+  margin-bottom: 26px;
+  margin-top: -1px;
+  min-width: 15%;
+  margin-left: 1075px;
+  height: 26px;
+  padding: 6px;
+  border-radius: 7px;
+  border: 1px solid #ccc;
+}
+.enquiry-count {
+  margin-left: 1145px;
+  margin-right: 0px;
+  margin-top: 15px;
+}
  }
