--- a/src/styles/components/Meals.scss
+++ b/src/styles/components/Meals.scss
@@ -139,6 +139,14 @@ $text-color: #333;
               }
 }
 
+.view-close-button{
+  background: #6c757d;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 13px;
+  border: 1px solid #ccc;
+}
+
 .meals-table-list {
     margin: 20px 0;
   
@@ -363,7 +371,41 @@ $text-color: #333;
         }
       }
       
-
+      @media (min-width: 1025px) and (max-width: 1399px) {
+        .meal-card {
+          background: #fff;
+          border: 1px solid #ddd;
+          border-radius: 8px;
+          padding: 16px;
+          width: 21%;
+          max-width: 300px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      .meals-exportall-button {
+        background-color: #007bff;
+        color: rgb(248, 240, 240);
+        border: none;
+        margin-left: 71px;
+        padding: 11px 20px;
+        cursor: pointer;
+        font-size: 18px;
+        border-radius: 5px;
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .meals-search-input {
+      width: 17%;
+      height: 37px;
+      border-radius: 5px;
+      margin-left: 852px;
+      border: 1px solid #ccc;
+  }
+  .meals-count {
+    margin-left: 1170px;
+}
+      }
   
 
   @media (min-width: 768px) and (max-width: 1023px){
